@@ -1,0 +1,4 @@
+CREATE TABLE market_application_type (
+    id SMALLINT UNSIGNED NOT NULL PRIMARY KEY AUTO_INCREMENT,
+    name VARCHAR(50) NOT NULL
+);
